--- a/src/FeatureTogglesCoreTests/FeatureTogglesCoreTests.csproj
+++ b/src/FeatureTogglesCoreTests/FeatureTogglesCoreTests.csproj
@@ -7,6 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="3.1.5" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="3.1.5" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="3.1.5" />
     <PackageReference Include="Moq" Version="4.14.4" />
     <PackageReference Include="nunit" Version="3.12.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.15.1" />
@@ -14,10 +17,14 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\FeatureTogglesIConfiguration\FeatureTogglesIConfiguration.csproj" />
     <ProjectReference Include="..\FeatureToggles\FeatureToggles.csproj" />
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="app.config.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="testhost.dll.config">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
