--- a/src/FeatureToggles/FeatureToggles.csproj
+++ b/src/FeatureToggles/FeatureToggles.csproj
@@ -5,12 +5,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="3.1.5" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="3.1.5" />
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="4.7.0" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="Configuration\AppSettings\Providers\" />
-    <Folder Include="Providers\AppSettings\" />
   </ItemGroup>
 
 </Project>
