debugging json toggle tests

--- a/src/FeatureTogglesCoreTests/FeatureTogglesCoreTests.csproj
+++ b/src/FeatureTogglesCoreTests/FeatureTogglesCoreTests.csproj
@@ -21,6 +21,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="appsettings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="testhost.dll.config">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
